--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@types/uuid": "^10.0.0",
     "next": "15.0.3",
+    "openai": "^4.80.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "uuid": "^11.0.3"
